# maritime_weather

./: README.md  app.py  jest.config.js  package-lock.json  package.json  pyproject.toml  render.yaml  requirements.txt  test-maritime-routes.md
dashboard/: app.py
public/: landPolygons.geojson
routing/: graph.py  pathfinder.py  pathfinding.py  predefined_routes.py
src/: App.test.tsx  App.tsx  index.css
src/components/: CoordinateInput.tsx
src/components/Analytics/: RouteImpactAnalysis.tsx  index.ts
src/components/CoordinateInput/: CoordinateInput.tsx
src/components/IntroAnimation/: IntroAnimation.tsx  index.ts
src/components/Map/: MapComponent.tsx  WeatherControlPanel.tsx  WindLayer.tsx
src/components/Ship/: AdvancedGauge.tsx  DigitalStatusPanel.tsx  EmergencyControlPanel.tsx  EngineControlPanel.tsx  EnhancedRadar.tsx  NavigationControlPanel.tsx  ShipDashboard.tsx
src/components/Voyage/: VoyageOptimizationDashboard.tsx
src/components/Weather/: WeatherDisplay.tsx
src/components/common/: ErrorHandling.tsx  Layout.tsx
src/pages/Dashboard/: index.tsx
src/pages/RoutePlanner/: index.tsx
src/services/: geocoding.ts  landPolygons.geojson  maritimePathfinding.test.ts  maritimePathfinding.ts  maritimeRouting.ts  portDatabase.ts  seaRouting.ts  seaRoutingTest.ts  weatherService.ts
src/styles/: leaflet.css
src/types/: geojson.d.ts  weather.ts
src/utils/: excelProcessor.ts
utils/: __init__.py
weather/: simulation.py  simulator.py
